Rollen mit RegEx filtern

--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -11,9 +11,11 @@
     </tr>
 
     <tr *ngFor = "let result of rows; let i = index">
-      <td>{{this.result2[i]}}</td>
-      <td><div *ngIf='result==" \n"' style="background-color:yellow">test</div>
-        {{result}}</td>
+      <td class="rows-table">{{this.result2[i]}}</td>
+      <td class="rows-table"><div *ngIf='result==" \n"' class="td-table">
+        <p class="td-table"></p></div>
+          {{result}}
+      </td>
     </tr>
   </table>
 
