--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -2,7 +2,30 @@
 <br>
 <br>
 <br>
-
+<mat-accordion>
+  <mat-expansion-panel hideToggle>
+    <mat-expansion-panel-header>
+      *ngFor = "let result of rows; let i = index"
+      <mat-panel-title>
+        {{this.result2[i]}}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <p>*ngIf='result==" \n"'</p>
+  </mat-expansion-panel>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Self aware panel
+      </mat-panel-title>
+      <mat-panel-description>
+        Currently I am {{panelOpenState ? 'open' : 'closed'}}
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <p>I'm visible because I am open</p>
+  </mat-expansion-panel>
+</mat-accordion>
+<!--
   <table>
     <tr>
       <th *ngFor = "let column of headers" class="content-table">
@@ -16,5 +39,5 @@
         {{result}}</td>
     </tr>
   </table>
-
+-->
 <!-- <app-test></app-test> -->
