--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -1,18 +1,36 @@
-<input class="button-design" type="file" (change)="onChange($event)">
-<br>
-<br>
-<br>
-<mat-accordion>
-  *ngFor = "let result of rows; let i = index"
-  <mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{this.result2[i]}}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <p>*ngIf='result==" \n"'</p>
-  </mat-expansion-panel>
-</mat-accordion>
+<table mat-table
+       [dataSource]="dataSource" multiTemplateDataRows
+       class="mat-elevation-z8">
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of headers"> 
+    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <td mat-cell *matCellDef="let element"> {{column}} </td>
+  </ng-container>
+
+  <ng-container *ngFor = "let result of rows; let i = index" matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="headers.length">
+      <div class="example-element-detail"
+           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+
+        <div class="example-element-diagram">
+          <div class="example-element-name"> {{this.result2[i]}} </div>
+        </div>
+
+        <div class="example-element-description">
+          {{this.result}} 
+        </div>
+        
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="headers"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" 
+      class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element"
+      (click)="expandedElement = element">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
 
 <!--
   <table>
