--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -1,5 +1,5 @@
 <table mat-table
-       [dataSource]="dataSource" multiTemplateDataRows
+      multiTemplateDataRows
        class="mat-elevation-z8">
   <ng-container matColumnDef="{{column}}" *ngFor="let column of headers"> 
     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
