--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -9,7 +9,7 @@
   <ng-container *ngFor = "let result of rows; let i = index" matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="headers.length">
       <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+           [@detailExpand]="element == result ? 'expanded' : 'collapsed'">
 
         <div class="example-element-diagram">
           <div class="example-element-name"> {{this.result2[i]}} </div>
@@ -26,8 +26,8 @@
   <tr mat-header-row *matHeaderRowDef="headers"></tr>
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" 
       class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = element">
+      [class.example-expanded-row]="result === element"
+      (click)="result = element">
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
