--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -1,12 +1,19 @@
+<input class="button-design" type="file" (change)="onChange($event)">
+<br>
+<br>
+<br>
 <table mat-table
       multiTemplateDataRows
        class="mat-elevation-z8">
-  <ng-container matColumnDef="{{column}}" *ngFor="let column of headers"> 
+
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of headers">
+    <div>test</div>
     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
     <td mat-cell *matCellDef="let element"> {{column}} </td>
   </ng-container>
 
-  <ng-container *ngFor = "let result of rows; let i = index" matColumnDef="expandedDetail">
+
+  <ng-container *ngFor = "let result of rows; let i = index" >
     <td mat-cell *matCellDef="let element" [attr.colspan]="headers.length">
       <div class="example-element-detail"
            [@detailExpand]="element == result ? 'expanded' : 'collapsed'">
@@ -16,20 +23,19 @@
         </div>
 
         <div class="example-element-description">
-          {{this.result}} 
+          {{this.result}}
         </div>
-        
+
       </div>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="headers"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" 
+  <tr mat-row *matRowDef="let element; columns: headers;"
       class="example-element-row"
       [class.example-expanded-row]="result === element"
       (click)="result = element">
   </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
 
 <!--
