--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -2,7 +2,24 @@
 <br>
 <br>
 <br>
-  <table>
+<table>
+  <tr>
+    <th *ngFor = "let column of headers" class="content-table">
+      {{column}}      </th>
+  </tr>
+  <tr *ngFor = "let result of rows; let i = index">
+    <td class="rows-table" (click)="changeExpandStatus(i)">{{this.result2[i]}}</td>
+    <td class="rows-table"  *ngIf="isExpanded[i]">
+      <div *ngIf='result==" \n"' class="td-table"><p class="td-table"></p></div>
+      {{result}}      </td>
+  </tr>
+</table>
+<!-- <app-test></app-test> -->
+
+
+
+
+<!-- <table>
     <tr>
       <th *ngFor = "let column of headers" class="content-table">
         {{column}}
@@ -16,5 +33,5 @@
           {{result}}
       </td>
     </tr>
-  </table>
+  </table> -->
 <!-- <app-test></app-test> -->
