--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -2,17 +2,31 @@
 <br>
 <br>
 <br>
+
 <table>
+
   <tr>
     <th *ngFor = "let column of headers" class="content-table">
-      {{column}}      </th>
+      {{column}}
+    </th>
   </tr>
-  <tr *ngFor = "let result of rows; let i = index">
-    <td class="rows-table" (click)="changeExpandStatus(i)">{{this.result2[i]}}</td>
-    <td class="rows-table"  *ngIf="isExpanded[i]">
-      <div *ngIf='result==" \n"' class="td-table"><p class="td-table"></p></div>
-      {{result}}      </td>
-  </tr>
+
+    <tr *ngFor = "let result of rows; let i = index">
+      <td class="rows-table" (click)="changeExpandStatus(i)"><div>{{this.result2[i]}}</div>
+      <div class="rows-table"  *ngIf="isExpanded[i]">
+        <div>
+          <table>
+            <tr>
+              <th>{{result}}</th>
+            </tr>
+          </table>
+        </div>
+        <!--<div *ngIf='result==" \n"' class="td-table"><p class="td-table"></p></div>
+        {{result}}-->
+      </div>
+      </td>
+    </tr>
+
 </table>
 <!-- <app-test></app-test> -->
 
