--- a/src/app/file-reader/file-reader.component.html
+++ b/src/app/file-reader/file-reader.component.html
@@ -6,6 +6,8 @@
 
 <table>
   <!-- Spalten ausgeben -->
+  <div class="rotezeile">{{kommentar}}</div>
+  <div class="gruenezeile">{{zehnZeilen}}</div>
   <tr>
     <th *ngFor = "let column of headers" class="content-table">
       {{column}}
