--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>angular-app</span>
+      <span>Code Analyzer</span>
     <!-- <mat-toolbar-row> -->
       <span style="flex:auto"></span>
         <!--<div fxShow="true" fxHide.It-md fxFlex fxLayout>
