--- a/src/app/file-reader/file-reader.component.css
+++ b/src/app/file-reader/file-reader.component.css
@@ -39,3 +39,12 @@
 .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+.gruenezeile{
+color:green;
+background-color: #F6F6F6;
+}
+
+.rotezeile{
+color:red;
+background-color: #F6F6F6;
+}
